<resources>
    <string name="app_name">HIIT Timer</string>
    <string name="timer_name">Name:</string>
    <string name="rest_time">Rest Time</string>
    <string name="create_new_timer">Create New Timer</string>
    <string name="number_of_sets">Number of sets</string>
    <string name="new_timer">New Timer</string>
    <string name="timers">Timers</string>
    <string name="create_timer">Create</string>
    <string name="working_time_per_set">Working time per set</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="cancel_button">Cancel</string>
    <string name="edit_char_info">Edit</string>
    <string name="done_char_info">Done</string>
    <string name="edit_timer">Edit</string>
    <string name="edit_timer_label">Edit Timer</string>

</resources>
