<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        tools:context=".EditTimerInfo"
>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
                android:id="@+id/new_timer_edit_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_timer_label"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"/>



        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/timer_name_edit_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/white"
                    android:text="@string/timer_name"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

            <EditText
                    android:id="@+id/timer_name_edit_form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:inputType="text"
                    android:textStyle="bold"
                    android:text=""
                    android:textColor="@color/white"
                    android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/set_number_edit_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_sets"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
            <EditText
                    android:id="@+id/set_number_edit_form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:text=""
                    android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/working_time_edit_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/working_time_per_set"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
            <EditText
                    android:id="@+id/working_time_edit_form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:text=""
                    android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/rest_time_edit_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rest_time"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
            <EditText
                    android:id="@+id/rest_time_edit_form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:text=""
                    android:textAlignment="center"/>
        </LinearLayout>




    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">
        <Button
                android:id="@+id/edit_timer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_timer"
                android:textSize="30sp"
                android:onClick="saveEditTimer"

        />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel_timer_button"
                android:text="@string/cancel_button"
                android:textSize="30sp"
                android:onClick="cancelEditTimer"
        />
    </LinearLayout>

</RelativeLayout>