<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
                android:id="@+id/new_timer_create_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_new_timer"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"/>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/timer_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/white"
                    android:text="@string/timer_name"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

            <EditText
                    android:id="@+id/timer_name_form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:text=""
                    android:textAlignment="center"/>
        </LinearLayout>


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/rest_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rest_time"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
            <EditText
                    android:id="@+id/rest_time_form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:text=""
                    android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/set_number_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_sets"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
            <EditText
                    android:id="@+id/set_number_form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:text=""
                    android:textAlignment="center"/>
        </LinearLayout>

    </LinearLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/create_timer"
            android:textSize="30sp"/>


</RelativeLayout>