<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        tools:context=".TimerInfo"
>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                    android:id="@+id/timer_name_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text=""
                    android:textColor="@color/white"
                    android:textAlignment="center"/>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/set_number_info_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_sets"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
            <TextView
                    android:id="@+id/set_number_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:text=""
                    android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/working_time_info_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/working_time_per_set"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
            <TextView
                    android:id="@+id/working_time_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:text=""
                    android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/rest_time_info_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rest_time"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
            <TextView
                    android:id="@+id/rest_time_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:text=""
                    android:textAlignment="center"/>
        </LinearLayout>



    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">
        <Button
                android:id="@+id/create_timer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_char_info"
                android:textSize="30sp"
                android:onClick="editTimerInfo"

        />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timer_cancel_button"
                android:text="@string/done_char_info"
                android:textSize="30sp"
                android:onClick="doneTimerInfo"
        />
    </LinearLayout>

</RelativeLayout>