<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".NewTimer"
>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/new_timer_create_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_new_timer"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
        </LinearLayout>
        <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="75dp">
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <EditText
                                android:id="@+id/timer_name_form"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:textSize="30sp"
                                android:gravity="center"
                                android:layout_gravity="center_horizontal"
                                android:backgroundTint="@color/grey"
                                android:inputType="text"
                                android:textStyle="bold"
                                android:text="Name"
                                android:textColor="@color/black"
                                android:textAlignment="center"/>
                        <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginTop="10sp"
                                android:gravity="center_vertical|start"
                                android:layout_gravity="center_horizontal">
                            <TextView
                                    android:id="@+id/set_number_label"
                                    android:layout_width="0dp"
                                    android:layout_weight="1"
                                    android:layout_height="wrap_content"
                                    android:text="@string/number_of_sets"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold"/>
                            <EditText
                                    android:id="@+id/set_number_form"
                                    android:layout_width="0dp"
                                    android:layout_weight="1"
                                    android:layout_height="wrap_content"
                                    android:ems="15"
                                    android:textStyle="bold"
                                    android:backgroundTint="@color/grey"
                                    android:textSize="30sp"
                                    android:inputType="number"
                                    android:textColor="@color/black"
                                    android:text=""
                                    android:textAlignment="center"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center_vertical|start"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10sp">
                        <TextView
                                android:id="@+id/working_time_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:text="@string/working_time_per_set"
                                android:textColor="@color/black"
                                android:background="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold"/>
                        <TextView
                                android:id="@+id/display_working_time"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:textAlignment="center"
                                android:gravity="center_horizontal"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/black"
                                android:background="@color/white"
                                android:text="--:--"
                                android:textSize="30sp"
                                android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/working_time_linear_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                      >
                        <NumberPicker
                                android:id="@+id/set_time_form"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".40"
                                android:scaleX="0.75"
                                android:scaleY="0.75"
                                android:textStyle="bold"
                                android:ems="6"
                                android:textSize="30sp"
                                android:inputType="number"
                                android:textAlignment="center"/>

                        <TextView
                                android:layout_width="0dp"
                                android:layout_weight=".10"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="min"
                                android:textColor="@color/black"
                                android:textAlignment="center"
                                android:gravity="start"
                                android:textSize="20sp"/>

                        <NumberPicker
                                android:id="@+id/set_time_seconds_form"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".40"
                                android:scaleX="0.75"
                                android:scaleY="0.75"
                                android:ems="6"
                                android:layout_marginStart="5sp"
                                android:textStyle="bold"
                                android:textSize="30sp"
                                android:inputType="number"
                                android:textAlignment="center"/>
                        <TextView
                                android:layout_width="0dp"
                                android:layout_weight=".10"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="sec"
                                android:textColor="@color/black"
                                android:gravity="start"
                                android:textSize="20sp"/>
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center_vertical|start"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10sp">
                        <TextView
                                android:id="@+id/rest_time_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rest_time"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:background="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold"/>
                        <TextView
                                android:id="@+id/display_rest_time"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:textAlignment="center"
                                android:gravity="center_horizontal"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/black"
                                android:text="--:--"
                                android:textSize="30sp"
                                android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/rest_time_linear_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                     >
                        <NumberPicker
                                android:id="@+id/rest_time_form"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".40"
                                android:scaleX="0.75"
                                android:scaleY="0.75"
                                android:ems="6"
                                android:textStyle="bold"
                                android:textSize="30sp"
                                android:inputType="number"
                                android:text=""
                                android:textAlignment="center"/>
                        <TextView
                                android:layout_width="0dp"
                                android:layout_weight=".10"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="min"
                                android:gravity="start"
                                android:textColor="@color/black"
                                android:textSize="20sp"/>

                        <NumberPicker
                                android:id="@+id/rest_time_seconds_form"
                                android:layout_width="0dp"
                                android:layout_weight=".40"
                                android:layout_height="wrap_content"
                                android:scaleX="0.75"
                                android:scaleY="0.75"
                                android:ems="6"
                                android:textStyle="bold"
                                android:textSize="30sp"
                                android:layout_marginStart="5sp"
                                android:inputType="number"
                                android:text=""
                                android:textAlignment="center"/>
                        <TextView
                                android:layout_width="0dp"
                                android:layout_weight=".10"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="sec"
                                android:gravity="start"
                                android:textColor="@color/black"

                                android:textSize="20sp"/>
                    </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">
        <Button
                android:id="@+id/create_timer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_timer"
                android:textSize="30sp"
                android:onClick="saveNewTimer"

        />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timer_cancel_button"
                android:text="@string/cancel_button"
                android:textSize="30sp"
                android:onClick="cancelCreateTimer"/>
    </LinearLayout>

</RelativeLayout>